# desktop-pet

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  create-icon.ps1  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
configs/: logging.yaml  settings.yaml
configs/prompts/: system-prompt.md
docs/01-research/: 01-framework-research.md  02-art-resources-research.md  03-llm-architecture-research.md  04-user-state-perception-research.md  05-development-process-research.md
docs/02-requirements/: PROJECT-STRUCTURE.md  SRS.md  requirements-tracking.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  perception.rs
src/02-llm/src/: gateway.ts  types.ts
src/02-llm/src/__tests__/: gateway.test.ts
src/02-llm/src/clients/: ollama-client.ts  openai-client.ts
src/04-ui/src/components/ChatBubble/: index.tsx
src/04-ui/src/components/PetSprite/: index.tsx
src/04-ui/src/components/Settings/: index.tsx
src/04-ui/src/components/TrayMenu/: index.tsx
src/04-ui/src/stores/: chat-store.ts  pet-store.ts  settings-store.ts
src/04-ui/src/stores/__tests__/: chat-store.test.ts  pet-store.test.ts  settings-store.test.ts
tools/CI-CD/: github-actions.yml
