[package]
name = "desktop-pet"
version = "0.1.0"
description = "LLM-driven desktop pet for Windows"
authors = ["[Owner]"]
edition = "2021"

[lib]
name = "desktop_pet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
winapi = { version = "0.3", features = [
    "winuser",
    "shellapi",
    "埋",
    "processthreadsapi",
    "winbase",
    "wingdi",
] }
once_cell = "1"
parking_lot = "0.12"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-notification = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
